# canbeta

./: .editorconfig  .gitignore  .gitmessage  404.html  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SECURITY.md  index.html  local.py  mkdocs.yml  setup.cfg  setup.sh  sitemap.xml
.github/: pull_request_template.md
can09/: __main__.py  setting.py
can09/child/: __init__.py  main.py  setting.py
can09/cmd/: run.py
can09/control/: listen.py  send_start.py  setting.py
can09/nodes/: falling_node.py  first_running_node.py
can09/parent/: __init__.py  first_phase_exp.md  main.py  setting.py
can09/server/: __init__.py  command_base.py  command_server.py  request.py
can09/util/: transceiver.py
canbeta/: setting.py
canbeta/child/: main.py  setting.py
canbeta/cmd/: run.py
canbeta/control/: listen.py  send_start.py  setting.py
canbeta/parent/: setting.py
canbeta/server/: request.py
canbeta/util/: __init__.py
circuit/child/: 2020can_slave_v1.brd  2020can_slave_v1.sch  2020can_slave_v2.brd  2020can_slave_v2.sch  2020can_slave_v3.sch
circuit/parent/: 2020can_master_v1.brd  2020can_master_v1.sch  2020can_master_v2.brd  2020can_master_v2.sch  2020can_master_v3.sch  2020can_master_v4.brd  (+6 more)
cli/: index.html
control/: README.md
dev/: index.html
developer/: index.html
docs/: cli.md  environment.md  hardware.md  index.md  test.md  trouble_shooting.md  trouble_shootings.md
exp/: README.md
learning/: index.html
project/: index.html
search/: search_index.json
server/: index.html
src/: main.py
trouble_shootings/: index.html
(+98 files in other folders)
