[metadata]
name = canbeta
version = attr: canbeta.__version__
url = https://FROM-THE-EARTH.github.io/canbeta
author = Yunhyeon Jeong, Ito Mizuki, Taiki Okada and Seiji Toshikage
author_email = jjj999to@gmail.com
description = CanSat developed by FTE 9th.
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT

[options]
python_requires = >= 3.7
packages = find:
install_required =
    numpy
    pigpio
    pisat

[options.entry_points]
console_scripts =
    mygit = mygit.cli:main
